--- a/_bibliography/international.bib
+++ b/_bibliography/international.bib
@@ -3,6 +3,30 @@
 
 @string{aps = {American Physical Society,}}
 
+@presentation{talk4,
+  abbr={Talk},
+  title={Universal, deterministic, and exact protocol to reverse qubit-unitary and qubit-encoding isometry operations},
+  author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
+  journal={18th Conference On the Theory of Quantum Computation, Communication and Cryptography (TQC 2023)},
+  url={https://tqc-conference.org/},
+  location={Aveiro (Portugal)},
+  year={2023},
+  month={July},
+  date={27},
+}
+
+@presentation{talk3,
+  abbr={Talk},
+  title={Universal, deterministic, and exact protocol to reverse qubit-unitary and qubit-encoding isometry operations},
+  author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
+  journal={Quantum Physics and Logic 2023 (QPL 2023)},
+  url={https://qpl2023.github.io/},
+  location={Paris (France)},
+  year={2023},
+  month={July},
+  date={20},
+}
+
 @presentation{invited1,
   abbr={Invited talk},
   title={Universal inversion of unitary and isometry operations: deterministic and exact algorithms},
