--- a/_bibliography/reviews.bib
+++ b/_bibliography/reviews.bib
@@ -2,3 +2,16 @@
 ---
 
 @string{aps = {American Physical Society,}}
+
+@article{yoshida2023thermodynamic,
+  abbr={Seibutsu Butsuri},
+  selected={true},
+  bibtex_show={true},
+  title={Thermodynamic Role of Multi-body Information Flow in Membrane Transport (Japanese)},
+  author={Yoshida, Satoshi and Ito, Sosuke},
+  journal={Seibutsu Butsuri},
+  volume={63},
+  pages={218},
+  year={2023},
+  doi={10.2142/biophys.63.218},
+}
