--- a/_bibliography/reviews.bib
+++ b/_bibliography/reviews.bib
@@ -7,7 +7,7 @@
   abbr={Seibutsu Butsuri},
   selected={true},
   bibtex_show={true},
-  title={Thermodynamic Role of Multi-body Information Flow in Membrane Transport (Japanese)},
+  title={Thermodynamic Role of Multi-body Information Flow in Membrane Transport (in Japanese)},
   author={Yoshida, Satoshi and Ito, Sosuke},
   journal={Seibutsu Butsuri},
   volume={63},
