--- a/_bibliography/reviews.bib
+++ b/_bibliography/reviews.bib
@@ -4,12 +4,12 @@
 @string{aps = {American Physical Society,}}
 
 @article{yoshida2023thermodynamic,
-  abbr={Seibutsu Butsuri},
+  abbr={生物物理},
   selected={true},
   bibtex_show={true},
   title={Thermodynamic Role of Multi-body Information Flow in Membrane Transport (in Japanese)},
   author={Yoshida, Satoshi and Ito, Sosuke},
-  journal={Seibutsu Butsuri},
+  journal={生物物理},
   volume={63},
   pages={218},
   year={2023},
