--- a/_bibliography/international.bib
+++ b/_bibliography/international.bib
@@ -3,6 +3,18 @@
 
 @string{aps = {American Physical Society,}}
 
+@presentation{talk5,
+  abbr={Talk},
+  title={Universal, deterministic, and exact protocol to reverse qubit-unitary and qubit-encoding isometry operations},
+  author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
+  journal={23rd Asian Quantum Information Science Conference (AQIS 2023)},
+  url={http://aqis-conf.org/2023/},
+  location={Seoul (Korea)},
+  year={2023},
+  month={August},
+  date={29},
+}
+
 @presentation{talk4,
   abbr={Talk},
   title={Universal, deterministic, and exact protocol to reverse qubit-unitary and qubit-encoding isometry operations},
