--- a/_bibliography/reviews.bib
+++ b/_bibliography/reviews.bib
@@ -7,8 +7,8 @@
   abbr={生物物理},
   selected={true},
   bibtex_show={true},
-  title={Thermodynamic Role of Multi-body Information Flow in Membrane Transport (in Japanese)},
-  author={Yoshida, Satoshi and Ito, Sosuke},
+  title={膜輸送における多体情報流の熱力学的役割},
+  author={吉田 智治 and 伊藤 創祐},
   journal={生物物理},
   volume={63},
   pages={218},
