--- a/_bibliography/reviews.bib
+++ b/_bibliography/reviews.bib
@@ -8,7 +8,7 @@
   selected={true},
   bibtex_show={true},
   title={膜輸送における多体情報流の熱力学的役割},
-  author={吉田 智治 and 伊藤 創祐},
+  author={智治, 吉田 and 創祐, 伊藤},
   journal={生物物理},
   volume={63},
   pages={218},
