--- a/_bibliography/reviews.bib
+++ b/_bibliography/reviews.bib
@@ -6,7 +6,7 @@
 @article{yoshida2023thermodynamic,
   abbr={生物物理},
   selected={true},
-  bibtex_show={true},
+  bibtex_show={false},
   title={膜輸送における多体情報流の熱力学的役割},
   author={智治, 吉田 and 創祐, 伊藤},
   journal={生物物理},
