--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -32,7 +32,7 @@
 }
 
 @article{yoshida2022thermodynamic,
-  abbr={Phys. Rev. Research},
+  abbr={Phys. Rev. Res.},
   selected={true},
   bibtex_show={true},
   title={Thermodynamic role of main reaction pathway and multi-body information flow in membrane transport},
