--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 @string{aps = {American Physical Society,}}
 
 @article{yoshida2023reversing,
-  abbr={arXiv},
+  abbr={Phys. Rev. Lett.},
   selected={true},
   bibtex_show={true},
   title={{Reversing Unknown Qubit-Unitary Operation, Deterministically and Exactly}},
