--- a/_bibliography/international.bib
+++ b/_bibliography/international.bib
@@ -3,6 +3,18 @@
 
 @string{aps = {American Physical Society,}}
 
+@presentation{talk6,
+  abbr={Talk},
+  title={Universal, deterministic, and exact protocol to reverse qubit-unitary and qubit-encoding isometry operations},
+  author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
+  journal={Foundations and Developments of Quantum Information Theory},
+  url={https://www2.yukawa.kyoto-u.ac.jp/~qimg2023/YKIS/index.php},
+  location={Kyoto (Japan)},
+  year={2023},
+  month={September},
+  date={19},
+}
+
 @presentation{talk5,
   abbr={Talk},
   title={Universal, deterministic, and exact protocol to reverse qubit-unitary and qubit-encoding isometry operations},
