--- a/_bibliography/seminars.bib
+++ b/_bibliography/seminars.bib
@@ -1,7 +1,13 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
+@seminar{seminar4,
+  title={Universal, deterministic, and exact protocol to reverse qubit-unitary and qubit-encoding isometry operations},
+  location={Quantum Foundations Seminar, Perimeter Institute},
+  year={2023},
+  month={October},
+  date={19},
+}
 
 @seminar{seminar3,
   title={Universal inversion of unitary and isometry operations&#58; deterministic and exact algorithms},
