--- a/_bibliography/domestic.bib
+++ b/_bibliography/domestic.bib
@@ -1,7 +1,17 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
+@presentation{talk4,
+  abbr={Talk},
+  title={量⼦コンピュータを⽤いた「時間反転」のシミュレーション},
+  author={吉田智治},
+  journal={ipi-ダイキン シンポジウム},
+  url={https://www.phys.s.u-tokyo.ac.jp/about/39182/},
+  location={東京都},
+  year={2023},
+  month={October},
+  date={25},
+}
 
 @presentation{talk3,
   abbr={Talk},
