--- a/_bibliography/international.bib
+++ b/_bibliography/international.bib
@@ -1,9 +1,20 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
+@presentation{poster2023-7,
+  abbr={Talk},
+  title={Universal, deterministic, and exact protocol to reverse qubit-unitary and qubit-encoding isometry operations},
+  author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
+  journal={Quantum Innovation 2023},
+  url={https://quantum-innovation.riken.jp/},
+  location={Tokyo (Japan)},
+  year={2023},
+  month={November},
+  date={16},
+}
 
-@presentation{talk6,
+
+@presentation{talk2023-6,
   abbr={Talk},
   title={Universal, deterministic, and exact protocol to reverse qubit-unitary and qubit-encoding isometry operations},
   author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
@@ -15,7 +26,7 @@
   date={19},
 }
 
-@presentation{talk5,
+@presentation{talk2023-5,
   abbr={Talk},
   title={Universal, deterministic, and exact protocol to reverse qubit-unitary and qubit-encoding isometry operations},
   author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
@@ -27,7 +38,7 @@
   date={29},
 }
 
-@presentation{talk4,
+@presentation{talk2023-4,
   abbr={Talk},
   title={Universal, deterministic, and exact protocol to reverse qubit-unitary and qubit-encoding isometry operations},
   author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
@@ -39,7 +50,7 @@
   date={27},
 }
 
-@presentation{talk3,
+@presentation{talk2023-3,
   abbr={Talk},
   title={Universal, deterministic, and exact protocol to reverse qubit-unitary and qubit-encoding isometry operations},
   author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
@@ -51,7 +62,7 @@
   date={20},
 }
 
-@presentation{invited1,
+@presentation{invited2023-2,
   abbr={Invited talk},
   title={Universal inversion of unitary and isometry operations: deterministic and exact algorithms},
   author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
@@ -63,31 +74,7 @@
   date={21},
 }
 
-@presentation{talk2,
-  abbr={Talk},
-  title={Probabilistic exact construction of decoders from encoding black boxes},
-  author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
-  journal={Quantum Physics and Logic 2022 (QPL 2022)},
-  url={https://www.qplconference.org/},
-  location={Oxford (UK)},
-  year={2022},
-  month={July},
-  date={1},
-}
-
-@presentation{talk1,
-  abbr={Talk},
-  title={Universal construction of decoders from encoding black boxes},
-  author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
-  journal={YITP international workshop Quantum Information Entropy in Physics},
-  url={http://www2.yukawa.kyoto-u.ac.jp/~qiep2022/QIEP/index.php},
-  location={Kyoto (Japan, online)},
-  year={2022},
-  month={March},
-  date={22},
-}
-
-@presentation{poster5,
+@presentation{poster2023-1,
   abbr={Poster},
   title={Universal decoding of a single qubit information: deterministic and exact protocol},
   author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
@@ -99,7 +86,7 @@
   date={6},
 }
 
-@presentation{poster4,
+@presentation{poster2022-6,
   abbr={Poster},
   title={Reversing unknown qubit-unitary operation, deterministically and exactly},
   author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
@@ -111,7 +98,19 @@
   date={10},
 }
 
-@presentation{poster3,
+@presentation{talk2022-5,
+  abbr={Talk},
+  title={Probabilistic exact construction of decoders from encoding black boxes},
+  author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
+  journal={Quantum Physics and Logic 2022 (QPL 2022)},
+  url={https://www.qplconference.org/},
+  location={Oxford (UK)},
+  year={2022},
+  month={July},
+  date={1},
+}
+
+@presentation{poster2022-4,
   abbr={Poster},
   title={Probabilistic exact construction of decoders from encoding black boxes},
   author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
@@ -123,7 +122,19 @@
   date={30},
 }
 
-@presentation{poster2,
+@presentation{talk2022-3,
+  abbr={Talk},
+  title={Universal construction of decoders from encoding black boxes},
+  author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
+  journal={YITP international workshop Quantum Information Entropy in Physics},
+  url={http://www2.yukawa.kyoto-u.ac.jp/~qiep2022/QIEP/index.php},
+  location={Kyoto (Japan, online)},
+  year={2022},
+  month={March},
+  date={22},
+}
+
+@presentation{poster2022-2,
   abbr={Poster},
   title={Probabilistic exact implementation of an inverse map of black box isometry operations},
   author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
@@ -135,7 +146,7 @@
   date={7},
 }
 
-@presentation{poster1,
+@presentation{poster2021-1,
   abbr={Poster},
   title={Universal construction of decoders from unknown encoders},
   author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
