--- a/_bibliography/international.bib
+++ b/_bibliography/international.bib
@@ -2,7 +2,7 @@
 ---
 
 @presentation{poster2023-7,
-  abbr={Talk},
+  abbr={Poster},
   title={Universal, deterministic, and exact protocol to reverse qubit-unitary and qubit-encoding isometry operations},
   author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
   journal={Quantum Innovation 2023},
