--- a/_bibliography/domestic.bib
+++ b/_bibliography/domestic.bib
@@ -1,7 +1,19 @@
 ---
 ---
 
-@presentation{talk4,
+@presentation{talk2023-3,
+  abbr={Talk},
+  title={Optimal protocols for universal adjointation of isometry operations --Protocol design by quantum supersupermaps--},
+  author={吉田智治 and 添田彬仁 and 村尾美緒},
+  journal={第49回量子情報技術研究会 (QIT49)},
+  url={https://www.ieice.org/es/qit/qit49/},
+  location={沖縄県},
+  year={2023},
+  month={December},
+  date={18},
+}
+
+@presentation{talk2023-2,
   abbr={Talk},
   title={量⼦コンピュータを⽤いた「時間反転」のシミュレーション},
   author={吉田智治},
@@ -13,7 +25,7 @@
   date={25},
 }
 
-@presentation{talk3,
+@presentation{talk2023-1,
   abbr={Talk},
   title={ユニタリ変換およびアイソメトリ変換を普遍的に反転する高階量子アルゴリズム},
   author={吉田智治 and 添田彬仁 and 村尾美緒},
@@ -25,7 +37,7 @@
   date={31},
 }
 
-@presentation{talk2,
+@presentation{talk2022-2,
   abbr={Talk},
   title={Universal decoding of a single qubit information: deterministic and exact protocol},
   author={吉田智治 and 添田彬仁 and 村尾美緒},
@@ -37,19 +49,7 @@
   date={9},
 }
 
-@presentation{talk1,
-  abbr={Talk},
-  title={未知のエンコーダーを逆変換化するユニバーサルなプロトコル},
-  author={吉田智治 and 添田彬仁 and 村尾美緒},
-  journal={第45回量子情報技術研究会(QIT45)},
-  url={https://www.ieice.org/es/qit/qit45/},
-  location={online},
-  year={2021},
-  month={November},
-  date={30},
-}
-
-@presentation{poster3,
+@presentation{poster2022-1,
   abbr={Poster},
   title={Reversing unknown qubit-unitary operation, deterministically and exactly},
   author={吉田智治 and 添田彬仁 and 村尾美緒},
@@ -61,7 +61,19 @@
   date={21},
 }
 
-@presentation{poster2,
+@presentation{talk2021-3,
+  abbr={Talk},
+  title={未知のエンコーダーを逆変換化するユニバーサルなプロトコル},
+  author={吉田智治 and 添田彬仁 and 村尾美緒},
+  journal={第45回量子情報技術研究会(QIT45)},
+  url={https://www.ieice.org/es/qit/qit45/},
+  location={online},
+  year={2021},
+  month={November},
+  date={30},
+}
+
+@presentation{poster2021-2,
   abbr={Poster},
   title={未知の量子演算を反転する高階量子演算について},
   author={吉田智治 and 添田彬仁 and 村尾美緒},
@@ -73,7 +85,7 @@
   date={17},
 }
 
-@presentation{poster1,
+@presentation{poster2021-1,
   abbr={Poster},
   title={高階量子演算における因果順序の古典制御},
   author={吉田智治 and 添田彬仁 and 村尾美緒},
