--- a/_bibliography/international.bib
+++ b/_bibliography/international.bib
@@ -1,6 +1,18 @@
 ---
 ---
 
+@presentation{poster2024-1,
+  abbr={Poster},
+  title={Optimal protocols for universal adjointation of isometry operations},
+  author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
+  journal={Quantum Information Processing 2024 (QIP 2024)},
+  url={https://qip2024.tw},
+  location={Taipei (Taiwan)},
+  year={2024},
+  month={January},
+  date={15},
+}
+
 @presentation{poster2023-7,
   abbr={Poster},
   title={Universal, deterministic, and exact protocol to reverse qubit-unitary and qubit-encoding isometry operations},
