--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,17 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{yoshida2024universal,
+  abbr={arXiv},
+  selected={true},
+  bibtex_show={true},
+  title={{Universal adjointation of isometry operations using transformation of quantum supermaps}},
+  author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
+  year={2024},
+  arxiv={2401.10137},
+  abstract={The full characterization of the possible transformations of quantum operations is indispensable to developing algorithms in higher-order quantum computation, which is the quantum version of functional programming. Although universal transformations of unitary operations have been well investigated, their extensions to non-unitary operations are still missing, except for a few examples. Here we construct \emph{isometry adjointation} protocols, transforming an input isometry operation into its adjoint operation. This task reduces to the transformation of unitary operation or that of quantum states in special cases. Parallel and sequential isometry adjointation protocols are constructed by transforming unitary inversion protocols using the composition of quantum combs. This construction achieves the optimal approximation error, which implies that the optimal performance does not depend on the output dimension of the isometry operation. In particular, we explicitly obtain the asymptotically optimal parallel protocol achieving the approximation error ε=Θ(d^2/n), where d is the input dimension of the isometry operation and n is the number of calls of the isometry operation. We also construct the protocols for the related tasks called isometry inversion and universal error detection. We conduct semidefinite programming to investigate the optimal performances of the tasks using general protocols including indefinite causal order protocols. The numerical results show that the optimal performances of general protocols do not depend on the output dimension of the isometry operation for isometry adjointation and universal error detection, which is shown analytically for parallel and sequential protocols. They also exhibit the advantage of indefinite causal order protocols over sequential protocols for isometry inversion and universal error detection.},
+}
+
 @article{yoshida2023reversing,
   abbr={Phys. Rev. Lett.},
   selected={true},
