--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -48,7 +48,7 @@ inversion protocol for an arbitrary dimension presented by M. T. Quintino and D.
 
 @article{yoshida2022thermodynamic,
   abbr={Phys. Rev. Res.},
-  selected={true},
+  selected={false},
   bibtex_show={true},
   title={Thermodynamic role of main reaction pathway and multi-body information flow in membrane transport},
   author={Yoshida, Satoshi and Okada, Yasushi and Muneyuki, Eiro and Ito, Sosuke},
