--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,16 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
+@article{yoshida2024concatenate,
+  abbr={arXiv},
+  selected={true},
+  bibtex_show={true},
+  title={{Concatenate codes, save qubits}},
+  author={Yoshida, Satoshi and Tamiya, Shiro and Murao, Mio},
+  year={2024},
+  arxiv={2402.09606},
+  abstract={The essential requirement for fault-tolerant quantum computation (FTQC) is the total protocol design to achieve a fair balance of all the critical factors relevant to its practical realization, such as the space overhead, the threshold, and the modularity. A major obstacle in realizing FTQC with conventional protocols, such as those based on the surface code and the concatenated Steane code, has been the space overhead, i.e., the required number of physical qubits per logical qubit. Protocols based on high-rate quantum low-density parity-check (LDPC) codes gather considerable attention as a way to reduce the space overhead, but problematically, the existing fault-tolerant protocols for such quantum LDPC codes sacrifice the other factors. Here we construct a new fault-tolerant protocol to meet these requirements simultaneously based on more recent progress on the techniques for concatenated codes rather than quantum LDPC codes, achieving a constant space overhead, a high threshold, and flexibility in modular architecture designs. In particular, under a physical error rate of 0.1%, our protocol reduces the space overhead to achieve the logical CNOT error rates 10−10 and 10−24 by more than 90% and 97%, respectively, compared to the protocol for the surface code. Furthermore, our protocol achieves the threshold of 2.4% under a conventional circuit-level error model, substantially outperforming that of the surface code. The use of concatenated codes also naturally introduces abstraction layers essential for the modularity of FTQC architectures. These results indicate that the code-concatenation approach opens a way to significantly save qubits in realizing FTQC while fulfilling the other essential requirements for the practical protocol design.},
+}
 
 @article{yoshida2024universal,
   abbr={arXiv},
@@ -11,7 +20,7 @@
   author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
   year={2024},
   arxiv={2401.10137},
-  abstract={The full characterization of the possible transformations of quantum operations is indispensable to developing algorithms in higher-order quantum computation, which is the quantum version of functional programming. Although universal transformations of unitary operations have been well investigated, their extensions to non-unitary operations are still missing, except for a few examples. Here we construct \emph{isometry adjointation} protocols, transforming an input isometry operation into its adjoint operation. This task reduces to the transformation of unitary operation or that of quantum states in special cases. Parallel and sequential isometry adjointation protocols are constructed by transforming unitary inversion protocols using the composition of quantum combs. This construction achieves the optimal approximation error, which implies that the optimal performance does not depend on the output dimension of the isometry operation. In particular, we explicitly obtain the asymptotically optimal parallel protocol achieving the approximation error ε=Θ(d^2/n), where d is the input dimension of the isometry operation and n is the number of calls of the isometry operation. We also construct the protocols for the related tasks called isometry inversion and universal error detection. We conduct semidefinite programming to investigate the optimal performances of the tasks using general protocols including indefinite causal order protocols. The numerical results show that the optimal performances of general protocols do not depend on the output dimension of the isometry operation for isometry adjointation and universal error detection, which is shown analytically for parallel and sequential protocols. They also exhibit the advantage of indefinite causal order protocols over sequential protocols for isometry inversion and universal error detection.},
+  abstract={Identification of possible transformations of quantum objects including quantum states and quantum operations is indispensable in developing quantum algorithms. Universal transformations, defined as input-independent transformations, appear in various quantum applications. Such is the case for universal transformations of unitary operations. However, extending these transformations to non-unitary operations is nontrivial and largely unresolved. Addressing this, we introduce isometry adjointation protocols that convert an input isometry operation into its adjoint operation, which include both unitary operation and quantum state transformations. The paper details the construction of parallel and sequential isometry adjointation protocols, derived from unitary inversion protocols using quantum combs, and achieving optimal approximation error. This error is shown to be independent of the output dimension of the isometry operation. In particular, we explicitly obtain an asymptotically optimal parallel protocol achieving an approximation error ε=Θ(d^2/n), where d is the input dimension of the isometry operation and n is the number of calls of the isometry operation. The research also extends to isometry inversion and universal error detection, employing semidefinite programming to assess optimal performances. The findings suggest that the optimal performance of general protocols in isometry adjointation and universal error detection is not dependent on the output dimension, and that indefinite causal order protocols offer advantages over sequential ones in isometry inversion and universal error detection.},
 }
 
 @article{yoshida2023reversing,
