--- a/_bibliography/seminars.bib
+++ b/_bibliography/seminars.bib
@@ -1,7 +1,15 @@
 ---
 ---
 
-@seminar{seminar4,
+@seminar{seminar2024-1,
+  title={Universal adjointation of isometry operations using transformation of quantum supermaps},
+  location={QI-LIP6, Sorbonne Universit\'{e}},
+  year={2024},
+  month={February},
+  date={21},
+}
+
+@seminar{seminar2023-3,
   title={Universal, deterministic, and exact protocol to reverse qubit-unitary and qubit-encoding isometry operations},
   location={Quantum Foundations Seminar, Perimeter Institute},
   year={2023},
@@ -9,7 +17,7 @@
   date={19},
 }
 
-@seminar{seminar3,
+@seminar{seminar2023-2,
   title={Universal inversion of unitary and isometry operations&#58; deterministic and exact algorithms},
   location={QIT Seminar, University of Bristol},
   year={2023},
@@ -17,7 +25,7 @@
   date={10},
 }
 
-@seminar{seminar2,
+@seminar{seminar2023-1,
   title={Universal inversion of unitary and isometry operations: deterministic and exact algorithms},
   url={https://kcik.ug.edu.pl/event/universal-inversion-of-unitary-and-isometry-operations-deterministic-and-exact-algorithms/},
   location={ICTQT Seminar, University of Gdańsk},
@@ -26,7 +34,7 @@
   date={15},
 }
 
-@seminar{seminar1,
+@seminar{seminar2022-1,
   title={Probabilistic exact construction of decoders from encoding black boxes},
   url={https://www.iqoqi-vienna.at/detail/event/talk-by-satoshi-yoshida-probabilistic-exact-construction-of-decoders-from-encoding-black-boxes},
   video={https://www.youtube.com/watch?v=zLmhY2qCd8o&list=PLtIs3eEC6pzKTj6l-MC5VCT7Uo7cim17m&index=16&ab_channel=IQOQIVienna},
