--- a/_bibliography/seminars.bib
+++ b/_bibliography/seminars.bib
@@ -1,6 +1,14 @@
 ---
 ---
 
+@seminar{seminar2024-2,
+  title={Universal adjointation of isometry operations using transformation of quantum supermaps},
+  location={Quantum Software Lab, The University of Edinburgh},
+  year={2024},
+  month={February},
+  date={29},
+}
+
 @seminar{seminar2024-1,
   title={Universal adjointation of isometry operations using transformation of quantum supermaps},
   location={QI-LIP6, Sorbonne Universit\'{e}},
