--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,17 @@
 ---
 ---
 
+@article{odake2024analytical,
+  abbr={arXiv},
+  selected={true},
+  bibtex_show={true},
+  title={{Analytical lower bound on the number of queries to a black-box unitary operation in deterministic exact transformations of unknown unitary operations}},
+  author={Odake, Tatsuki and Yoshida, Satoshi and Murao, Mio},
+  year={2024},
+  arxiv={2405.07625},
+  abstract={Several counter-intuitive go-theorems have recently been shown for transformations of unknown unitary operations; deterministic and exact complex conjugation, inversion, and transposition of a general d-dimensional unknown unitary operation are implementable with a finite number of queries of the black-box unitary operation. However, the minimum numbers of the required queries are not known except for d=2 unitary inversion and unitary transposition (numerical) and unitary conjugation (analytic). In this work, we derive complementary no-go theorems for deterministic and exact implementations of inversion and transposition of a d-dimensional unknown unitary operation under certain numbers of queries. The obtained no-go theorem indicates that the analytical lower bound of the number of queries for unitary inversion is d^2 and that for unitary transposition is 4 for d=2 and d+3 for $d\geq 3$. We have developed a new framework that utilizes differentiation to obtain the analytical lower bounds on the number of queries to the black-box unitary operation required to implement a transformation given by a general differentiable function mapping a unitary operation to another unitary operation, which reproduces the lower bound of the number of queries for unitary complex conjugation d−1. As a corollary, we show the relationship between the tightness of the lower bounds and the existence of optimal catalytic transformations, which is a new aspect recently identified in the study of deterministic and exact unitary inversion. Furthermore, we extend our framework to the probabilistic setting where the transformation is required to succeed with a certain probability, thereby showing a possible tradeoff relation between query numbers and the required success probability.},
+}
+
 @article{yoshida2024concatenate,
   abbr={arXiv},
   selected={true},
