--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @article{odake2024analytical,
   abbr={arXiv},
-  selected={true},
+  selected={false},
   bibtex_show={true},
   title={{Analytical lower bound on the number of queries to a black-box unitary operation in deterministic exact transformations of unknown unitary operations}},
   author={Odake, Tatsuki and Yoshida, Satoshi and Murao, Mio},
@@ -25,7 +25,7 @@
 
 @article{yoshida2024universal,
   abbr={arXiv},
-  selected={true},
+  selected={false},
   bibtex_show={true},
   title={{Universal adjointation of isometry operations using transformation of quantum supermaps}},
   author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
@@ -52,7 +52,7 @@ inversion protocol for an arbitrary dimension presented by M. T. Quintino and D.
 
 @article{yoshida2023universal,
   abbr={Quantum},
-  selected={true},
+  selected={false},
   bibtex_show={true},
   title={Universal construction of decoders from encoding black boxes},
   author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
