--- a/_bibliography/seminars.bib
+++ b/_bibliography/seminars.bib
@@ -1,6 +1,23 @@
 ---
 ---
 
+@seminar{seminar2024-4,
+  title={Deterministic and exact protocols for unitary inversion: Go and no-go results},
+  url={https://webs.uab.cat/giq/seminar/deterministic-and-exact-protocols-for-unitary-inversion-go-and-no-go-results/},
+  location={Grup d'Informaci\'{o} Qu\`{a}ntica (GIQ), Universitat Aut\`{o}noma de Barcelona},
+  year={2024},
+  month={July},
+  date={11},
+}
+
+@seminar{seminar2024-3,
+  title={Deterministic and exact protocols for unitary inversion: Go and no-go results},
+  location={QIT group, The Institute of Photonic Sciences (ICFO)},
+  year={2024},
+  month={July},
+  date={10},
+}
+
 @seminar{seminar2024-2,
   title={Universal adjointation of isometry operations using transformation of quantum supermaps},
   location={Quantum Software Lab, The University of Edinburgh},
