--- a/_bibliography/international.bib
+++ b/_bibliography/international.bib
@@ -1,6 +1,18 @@
 ---
 ---
 
+@presentation{talk2024-2,
+  abbr={Talk},
+  title={Optimal protocols for universal adjointation of isometry operations},
+  author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
+  journal={Quantum Physics and Logic 2024 (QPL 2024)},
+  url={https://qpl2024.dc.uba.ar},
+  location={Buenos Aires (Argentina)},
+  year={2024},
+  month={July},
+  date={19},
+}
+
 @presentation{poster2024-1,
   abbr={Poster},
   title={Optimal protocols for universal adjointation of isometry operations},
