--- a/_bibliography/international.bib
+++ b/_bibliography/international.bib
@@ -1,76 +1,76 @@
 ---
 ---
 
-@presentation{poster2024-8,
-  abbr={Poster},
-  title={Optimal protocols for universal adjointation of isometry operations},
-  author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
-  journal={19th Conference On the Theory of Quantum Computation, Communication and Cryptography (TQC 2024)},
-  url={https://tqc-conference.org},
-  location={Okinawa (Japan)},
-  year={2024},
-  month={September},
-  date={9},
-}
-
-@presentation{talk2024-7,
+@presentation{talk2024-8,
   abbr={Talk},
   title={Concatenate codes, save qubits},
   author={Yoshida, Satoshi and Tamiya, Shiro and Yamasaki, Hayata},
   journal={19th Conference On the Theory of Quantum Computation, Communication and Cryptography (TQC 2024)},
   url={https://tqc-conference.org},
   location={Okinawa (Japan)},
-  year={2024},
+  year={2024 (planned)},
   month={September},
   date={13},
 }
 
-@presentation{poster2024-6,
+@presentation{poster2024-7,
+  abbr={Poster},
+  title={Optimal protocols for universal adjointation of isometry operations},
+  author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
+  journal={19th Conference On the Theory of Quantum Computation, Communication and Cryptography (TQC 2024)},
+  url={https://tqc-conference.org},
+  location={Okinawa (Japan)},
+  year={2024 (planned)},
+  month={September},
+  date={9},
+}
+
+@presentation{talk2024-6,
+  abbr={Talk},
+  title={Optimal protocols for universal adjointation of isometry operations},
+  author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
+  journal={24th Asian Quantum Information Science Conference (AQIS 2024)},
+  url={http://aqis-conf.org/2024},
+  location={Sapporo (Japan)},
+  year={2024 (planned)},
+  month={August},
+  date={29},
+}
+
+@presentation{poster2024-5,
   abbr={Poster},
   title={Analytical lower bound on the number of queries to a black-box unitary operation in deterministic exact transformations of unknown unitary operations},
   author={Odake, Tatsuki and Yoshida, Satoshi and Murao, Mio},
   journal={24th Asian Quantum Information Science Conference (AQIS 2024)},
   url={http://aqis-conf.org/2024},
   location={Sapporo (Japan)},
-  year={2024},
+  year={2024 (planned)},
   month={August},
   date={27},
 }
 
-@presentation{poster2024-5,
-  abbr={Poster},
-  title={Concatenate codes, save qubits},
-  author={Yoshida, Satoshi and Tamiya, Shiro and Yamasaki, Hayata},
-  journal={24th Asian Quantum Information Science Conference (AQIS 2024)},
-  url={http://aqis-conf.org/2024},
-  location={Sapporo (Japan)},
-  year={2024},
-  month={August},
-  date={26},
-}
-
 @presentation{talk2024-4,
-  abbr={Talk},
-  title={Optimal protocols for universal adjointation of isometry operations},
-  author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
-  journal={24th Asian Quantum Information Science Conference (AQIS 2024)},
-  url={http://aqis-conf.org/2024},
-  location={Sapporo (Japan)},
-  year={2024},
-  month={August},
-  date={29},
-}
-
-@presentation{talk2024-3,
   abbr={Talk},
   title={Simulating the quantum switch using causally ordered circuits requires at least an exponential overhead in query complexity},
   author={Kristj\'ansson, Hl\'er and Odake, Tatsuki and Yoshida, Satoshi and Taranto, Philip and Bavaresco, Jessica and Quintino, Marco T\'{u}lio and Murao, Mio},
   journal={24th Asian Quantum Information Science Conference (AQIS 2024)},
   url={http://aqis-conf.org/2024},
   location={Sapporo (Japan)},
-  year={2024},
+  year={2024 (planned)},
   month={August},
   date={27},
+}
+
+@presentation{poster2024-3,
+  abbr={Poster},
+  title={Concatenate codes, save qubits},
+  author={Yoshida, Satoshi and Tamiya, Shiro and Yamasaki, Hayata},
+  journal={24th Asian Quantum Information Science Conference (AQIS 2024)},
+  url={http://aqis-conf.org/2024},
+  location={Sapporo (Japan)},
+  year={2024 (planned)},
+  month={August},
+  date={26},
 }
 
 @presentation{talk2024-2,
