--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,17 @@
 ---
 ---
 
+@article{yoshida2024one,
+  abbr={arXiv},
+  selected={true},
+  bibtex_show={true},
+  title={{One-to-one Correspondence between Deterministic Port-Based Teleportation and Unitary Estimation}},
+  author={Yoshida, Satoshi and Koizumi, Yuki and Studzi\'nski, Micha{\l} and Quintino, Marco T\'ulio and Murao, Mio},
+  year={2024},
+  arxiv={2408.11902},
+  abstract={Port-based teleportation is a variant of quantum teleportation, where the receiver can choose one of the ports in his part of the entangled state shared with the sender, but cannot apply other recovery operations. We show that the optimal fidelity of deterministic port-based teleportation (dPBT) using $N=n+1$ ports to teleport a $d$-dimensional state is equivalent to the optimal fidelity of $d$-dimensional unitary estimation using $n$ calls of the input unitary operation. From any given dPBT, we can explicitly construct the corresponding unitary estimation protocol achieving the same optimal fidelity, and vice versa. Using the obtained one-to-one correspondence between dPBT and unitary estimation, we derive the asymptotic optimal fidelity of port-based teleportation given by $F = 1-\Theta(d^4 N^{-2})$, which improves the previously known result given by $1-O(d^5 N^{-2}) \leq F \leq 1-\Omega(d^2 N^{-2})$. We also show that the optimal fidelity of unitary estimation for the case $n\leq d-1$ is $F = {n+1 \over d^2}$, and this fidelity is equal to the optimal fidelity of unitary inversion with $n\leq d-1$ calls of the input unitary operation even if we allow indefinite causal order among the calls.},
+}
+
 @article{odake2024analytical,
   abbr={arXiv},
   selected={false},
